--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.2.1",
+    "chart.js": "^2.7.3",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "popper.js": "^1.14.7",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
   },
