--- a/package.json
+++ b/package.json
@@ -17,6 +17,24 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/__tests__/*.js",
+      "!src/index.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    },
+    "coverageReporters": [
+      "html",
+      "text"
+    ]
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
